task-2.2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-php
  template:
    metadata:
      labels:
        app: app-php
    spec:
      containers:
        - name: nginx
          image: nginx:1.17-alpine
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d
            - name: site-files
              mountPath: /var/www/html
          ports:
            - name: web
              containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /health/
            initialDelaySeconds: 5
            periodSeconds: 5
        - name: php-app
          image: krasfree/otus:v2
          volumeMounts:
            - name: site-files
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /app/. /var/www/html && chmod -R 777 /var/www/html/var/*"]
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
            items:
              - key: config
                path: site.conf
        - name: site-files
          emptyDir: {}
