task-2.2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-php
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: NodePort
